Add menu animation on start

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,12 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicon/favicon-16x16.png"
     /> -->
-    <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="../src/assets/images/favicon.svg"
+    />
+    <link rel="icon" type="image/png" href="./favicon.png" />
     <link
       rel="mask-icon"
       href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg"
@@ -75,7 +80,6 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-
       gtag("config", "G-EB16CHNVBB");
     </script>
     <title>Andreas Andrikopoulos</title>
