--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../src/styles/style.css" />
+    <link
+      href="http://fonts.cdnfonts.com/css/snell-roundhand"
+      rel="stylesheet"
+    />
+
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-EB16CHNVBB"
