Feat: add contact-me on hero-page and About section

--- a/public/index.html
+++ b/public/index.html
@@ -87,10 +87,13 @@
       gtag("js", new Date());
       gtag("config", "G-EB16CHNVBB");
     </script>
+    <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script defer src="./jquery.tagcanvas.js"></script>
+
     <title>Andreas Andrikopoulos</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
