Create content folder in /public with projects and skills in .json format
ToDo: get content through http request

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,6 @@
       property="og:description"
       content="Andreas Andrikopoulos is a software engineer who specializes in building interactive and responsive web applications"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/share.jpg" />
-
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="http://andrikopoulosdev.eu//" />
     <meta property="twitter:title" content="Andreas Andrikopoulos" />
@@ -33,7 +31,6 @@
       property="twitter:description"
       content="Andreas Andrikopoulos is a software engineer who specializes in building interactive and responsive web applications"
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/share.jpg" />
 
     <!-- <link
       rel="apple-touch-icon"
@@ -52,17 +49,9 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicon/favicon-16x16.png"
     /> -->
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="../src/assets/images/favicon.svg"
-    />
-    <link rel="icon" type="image/png" href="./favicon.png" />
-    <link
-      rel="mask-icon"
-      href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg"
-      color="#333333"
-    />
+    <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
+    <link rel="manifest" href="./manifest.json" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
