Feat: add my-location using react-leaflet on contact section

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,12 @@
       property="twitter:description"
       content="Andreas Andrikopoulos is a software engineer who specializes in building interactive and responsive web applications"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+      crossorigin=""
+    />
     <!-- <link
       rel="apple-touch-icon"
       sizes="180x180"
