--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
       href="https://fonts.googleapis.com/css2?family=Allison&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../src/styles/style.css" />
+    <link rel="stylesheet" href="../src/assets/styles/style.css" />
     <link
       href="http://fonts.cdnfonts.com/css/snell-roundhand"
       rel="stylesheet"
