Feat: add detect scroll-direction functionality and hide-show header respectively

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
       href="%PUBLIC_URL%/favicon/favicon-16x16.png"
     /> -->
     <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="./manifest.json" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -63,7 +64,7 @@
       href="https://fonts.googleapis.com/css2?family=Allison&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../src/assets/styles/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="http://fonts.cdnfonts.com/css/snell-roundhand"
       rel="stylesheet"
