Feat: add react-loader 'ball-grid-pulse' on projects and jobs

--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,14 @@
     />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://andrikopoulosdev.eu/" />
+    <meta property="og:url" content="https://andrikopoulosdev.com/" />
     <meta property="og:title" content="Andreas Andrikopoulos" />
     <meta
       property="og:description"
       content="Andreas Andrikopoulos is a software engineer who specializes in building interactive and responsive web applications"
     />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="http://andrikopoulosdev.eu//" />
+    <meta property="twitter:url" content="https://andrikopoulosdev.com/" />
     <meta property="twitter:title" content="Andreas Andrikopoulos" />
     <meta
       property="twitter:description"
@@ -64,7 +64,7 @@
       href="https://fonts.googleapis.com/css2?family=Allison&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link
       href="http://fonts.cdnfonts.com/css/snell-roundhand"
       rel="stylesheet"
