Change cv content

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="title" content="Andreas Andrikopoulos" />
     <meta
       name="description"
-      content="A web Developer passionate about creating responsive and interactive applications!"
+      content="A web Developer passionate with creating interactive and responsive web applications!"
     />
 
     <meta property="og:type" content="website" />
@@ -37,24 +37,6 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
-    <!-- <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="%PUBLIC_URL%/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="%PUBLIC_URL%/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="%PUBLIC_URL%/favicon/favicon-16x16.png"
-    /> -->
-    <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="./manifest.json" />
 
