Fix mix content error

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link
-      href="http://fonts.cdnfonts.com/css/snell-roundhand"
+      href="https://fonts.cdnfonts.com/css/snell-roundhand"
       rel="stylesheet"
     />
 
